add application routes
