# openapi.yaml
@@ -112,6 +112,40 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /location:
+    description: Get avito location ID by name (region name or city)
+    post:
+      description: Return location id and specified in request payload location name
+      requestBody:
+      
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                location: string
+        
+      responses:
+        '200':
+          description: 'OK'
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  location_id: 
+                    type: int
+                  location_name:
+                    type: string
+
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+   
 components:
   responses:
     NotFound:
@@ -130,95 +164,6 @@ components:
       required:
         - error
       additionalProperties: false
-
-    Region:
-      type: string
-      description: "Valid names for regions"
-      enum:
-        - Крым
-        - Алтайский край
-        - Амурская область
-        - Архангельская область
-        - Астраханская область
-        - Белгородская область
-        - Брянская область
-        - Бурятия
-        - Владимирская область
-        - Волгоградская область
-        - Вологодская область
-        - Воронежская область
-        - Еврейская АО
-        - Ивановская область
-        - Ингушетия
-        - Иркутская область
-        - Кабардино-Балкария
-        - Калининградская область
-        - Калмыкия
-        - Калужская область
-        - Камчатский край
-        - Карачаево-Черкесия
-        - Кемеровская область
-        - Кировская область
-        - Костромская область
-        - Краснодарский край
-        - Красноярский край
-        - Курганская область
-        - Курская область
-        - Ленинградская область
-        - Липецкая область
-        - Магаданская область
-        - Москва
-        - Московская область
-        - Мурманская область
-        - Ненецкий АО
-        - Нижегородская область
-        - Новгородская область
-        - Новосибирская область
-        - Омская область
-        - Оренбургская область
-        - Орловская область
-        - Пензенская область
-        - Пермский край
-        - Приморский край
-        - Псковская область
-        - Адыгея
-        - Башкортостан
-        - Дагестан
-        - Карелия
-        - Коми
-        - Марий Эл
-        - Мордовия
-        - Саха (Якутия)
-        - Северная Осетия
-        - Татарстан
-        - Тыва
-        - Хакасия
-        - Ростовская область
-        - Рязанская область
-        - Самарская область
-        - Санкт-Петербург
-        - Саратовская область
-        - Сахалинская область
-        - Свердловская область
-        - Смоленская область
-        - Ставропольский край
-        - Тамбовская область
-        - Тверская область
-        - Томская область
-        - Тульская область
-        - Тюменская область
-        - Удмуртия
-        - Ульяновская область
-        - Хабаровский край
-        - Ханты-Мансийский АО
-        - Челябинская область
-        - Чеченская республика
-        - Забайкальский край
-        - Чувашия
-        - Чукотский АО
-        - Ямало-Ненецкий АО
-        - Ярославская область
-        - Республика Алтай
 
     StatItem:
       type: object
@@ -252,8 +197,8 @@ components:
       properties:
         query:
           type: string
-        region:
-          $ref: '#/Region'
+        location:
+          type: int
 
     StatsSchemeRequest:
       type: object
